# serverest_robot_framework

./: README.md  pyproject.toml
keywords/: carrinhos_keywords.robot  login_keywords.robot  produtos_keywords.robot  user_keywords.robot
reports/: log.html  output.xml  report.html
results/: log.html  output.xml  report.html
support/: base.robot  casos_de_teste.txt
support/common/: common.robot  library_python.py
support/fixtures/: dynamics.robot
support/fixtures/estatic/: massa_carrinho.json  massa_login.json  massa_produtos.json  massa_user.json
support/variables/: serverest_variables.robot
tests/: carrinhos_test.robot  login_test.robot  produtos_test.robot  user_test.robot
